// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitter > emit events 1`] = `
[
  "Initialize",
  "Search routers",
  "Parse router",
  "Parse router test/routers/test1.ts",
  "Parse router test/routers/test2.ts",
  "Parse router",
  "Append tag: test1",
  "Fix document by hand",
  "Fix document by hand [skipped]",
  "Optimize common parameters",
  "Save to file",
  "Save to file: openapi.json [size: 1.68KB]",
  "Validate",
  "Validate 38 warnings",
  "warn",
]
`;

exports[`emitter > validate with errors 1`] = `
[
  "Initialize",
  "Search routers",
  "Parse router",
  "Parse router",
  "Fix document by hand",
  "Fix document by hand [skipped]",
  "Optimize common parameters",
  "Save to file",
  "Save to file: openapi.json [size: 88B]",
  "Validate",
  "Validate 1 errors，3 warnings",
  "fail",
]
`;

exports[`routers > parse routers 1`] = `
{
  "/abc": {
    "get": {
      "operationId": "list_abc",
      "parameters": [
        {
          "in": "query",
          "name": "q1",
          "required": true,
          "schema": {
            "maxLength": 4294967295,
            "minLength": 0,
            "pattern": "",
            "type": "string",
          },
        },
        {
          "in": "query",
          "name": "q2",
          "required": true,
          "schema": {
            "items": {
              "exclusiveMinimum": false,
              "minimum": 100,
              "type": "number",
            },
            "type": "array",
          },
        },
      ],
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
    "post": {
      "operationId": "create_abc",
      "requestBody": {
        "content": {
          "*/*": {
            "schema": {
              "properties": {
                "name": {
                  "maxLength": 4294967295,
                  "minLength": 0,
                  "pattern": "",
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
        },
        "required": false,
      },
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
      "x-codegen-request-body-name": "body",
    },
  },
  "/abc/{id}": {
    "put": {
      "operationId": "replace_abc_id",
      "parameters": [
        {
          "in": "path",
          "name": "id",
          "required": true,
          "schema": {
            "type": "number",
          },
        },
      ],
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
  },
  "/abcde/{id}": {
    "delete": {
      "operationId": "delete_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
    "get": {
      "operationId": "get_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
    "options": {
      "operationId": "options_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
    "parameters": [
      {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    ],
    "patch": {
      "operationId": "update_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
    "post": {
      "operationId": "create_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
      "x-codegen-request-body-name": "body",
    },
    "put": {
      "operationId": "replace_abcde_id",
      "responses": {
        "default": {
          "description": "",
        },
      },
      "tags": [
        "test1",
      ],
    },
  },
}
`;
